ghc-4335c07/testsuite/tests/typecheck/should_fail/T5858.stderr

T5858.hs:11:7: error:
    • Ambiguous type variables ‘a0’, ‘a1’ arising from a use of ‘infer’
      prevents the constraint ‘(InferOverloaded
                                  ([a0], [a1]))’ from being solved.
      Probable fix: use a type annotation to specify what ‘a0’, ‘a1’ should be.
      These potential instance exist:
        instance (t1 ~ String) => InferOverloaded (t1, t1)
          -- Defined at T5858.hs:8:10
    • In the expression: infer ([], [])
      In an equation for ‘foo’: foo = infer ([], [])
